Added new feature 3

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="say">Keep smiling and shining like you always do 💖</div>
     <div class="say">Enjoy your special day and make beautiful memories 🎉</div>
     <div class="say"    ></div>
-    <div class="say">by your Non Blood Thambi 💕</div>
+    <div class="say">by your Thambi 💕</div>
 </div>
 
             </div>
